# blondie

./: .coveragerc  .gitignore  DEVELOPMENT.md  FAMILY.md  LICENSE  README.md  blondie.html  blondie.template.html  init.html  pyproject.toml  pytest.ini
.agent/: ISSUES.md  POLICY.md  POLICY.yaml  SPEC.md  TASKS.md  dev.yaml  llm_config.yaml  project.yaml  secrets.env.EXAMPLE.yaml
blog/: 2026-0301-python-on-win.md
docker/: Dockerfile  docker-entrypoint.sh
docs/: ARCHITECTURE1.md  ARCHITECTURE2.md  DEPLOY-SPEC.md  DEPLOY.md  DEVELOP.md  SKILLS.md  WORKFLOW.md
scripts/: build_wizard.py  fetch_models.py  format_md.py  setup_dev_repo.py  snapshot_tmp.py
skills/: coding_debug_error.skill.md  coding_generate_code.skill.md  coding_get_file_edits.skill.md  coding_orchestrator.skill.md  coding_plan_task.skill.md  command_runner.skill.md  command_runner2.skill.md  debug_error.skill.md  debug_error2.skill.md  generate_code.skill.md  generate_code2.skill.md  get_file_edits.skill.md  get_file_edits2.skill.md  marketing-ai-super-team.md  marketing-alex-hormozi-offer-architect.md  marketing-david-ogilvy-copy-chief.md  marketing-gary-vaynerchuk-content-strategist.md  marketing-russell-brunson-funnel-architect.md  marketing-sabri-suby-lead-gen-strategist.md  orchestrator.skill.md  plan_task.skill.md  plan_task2.skill.md  ralph-prd-to-json.skill.md  ralph-prd.skill.md  retrospective.skill.md
src/agent/: __init__.py  cli.py  context.py  executor.py  interaction.py  llm_config.py  loop.py  loop2.py  policy.py  progress.py  project.py  router.py  shell_cmd_policy.py  tasks.py  tooled.py  wizard.py
src/agent/cli/: executor.py  git.py
src/agent/lib/: __init__.py  models.py
src/cli/: __init__.py  git.py
src/lib/: __init__.py  gitignore.py  setup_repo.py  shell_cmd_parser.py  webscrape.py
src/llm/: __init__.py  client.py  journal.py  router.py  skill.py  tooled.py
templates/: POLICY.md.template  POLICY.yaml  SPEC.md  TASKS.md  dev.node-npm.yaml  dev.node-pnpm.yaml  dev.python-poetry.yaml  llm_config.yaml  project.yaml  project.yaml.template
templates/basic/: .gitignore  ISSUES.md  SPEC.md  TASKS.md  dev.yaml  llm_config.yaml  project.yaml
templates/basic/.agent/: POLICY.yaml  SPEC.md  secrets.env.EXAMPLE.yaml
templates/node/.agent/: POLICY.yaml  TASKS.md  dev.yaml  llm_config.yaml  project.yaml
templates/project-calculator/.agent/: ISSUES.md  POLICY.yaml  SPEC.md  TASKS.md  dev.yaml  llm_config.yaml  project.yaml  secrets.env.EXAMPLE.yaml
templates/python/: .gitignore
templates/python/.agent/: ISSUES.md  SPEC.md  TASKS.md  dev.yaml  project.yaml
tests/: test_init_html.py
tests/agent/: test_cli.py  test_context.py  test_executor.py  test_interaction.py  test_loop2.py  test_models.py  test_policy.py  test_progress.py  test_project.py  test_router_daily_limit.py  test_router_recursive.py  test_router_retry.py  test_router_validation.py  test_shell_cmd_policy.py  test_tasks.py  test_templates.py  test_tooled.py  test_wizard.py
tests/agent/cli/: test_git.py
tests/cli/: test_git.py  test_git_complex.py
tests/e2e/: test_html_wizard.py  test_v2_hello_world.py
tests/lib/: test_gitignore.py  test_setup_repo.py  test_shell_cmd_parser.py  test_webscrape.py
tests/llm/: test_client.py  test_journal.py  test_llm.py  test_llm_v2.py  test_skill.py
