[tool.poetry]
name = "blondie"
version = "0.1.0"
description = "Autonomous coding agent"
authors = ["iva2k <iva2k@yahoo.com>"]
readme = "README.md"
maintainers = ["iva2k <iva2k@yahoo.com>"]
packages = [
    {include = "agent", from = "src"},
    {include = "lib", from = "src"},
    {include = "llm", from = "src"},
    # {include = "repo", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.8.0"
pyyaml = "^6.0.2"
types-PyYAML = "^6.0.12.20250915"
gitpython = "^3.1.43"
openai = "^2.23.0"
anthropic = "^0.83.0"
httpx = "^0.28.0"
click = "^8.1.7"
rich = "^14.3.3"
pathspec = "^1.0.4"
markdown = "^3.7"
python-dotenv = "^1.0.1"
playwright = "^1.42.0"
beautifulsoup4 = "^4.12.3"
jsonschema = "^4.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
black = "^26.1.0"
ruff = "^0.15.2"
mypy = "^1.11.2"
pylint = "^4.0.5"
poethepoet = "^0.42.0"
types-pygments = "^2.19.0"
types-colorama = "^0.4.15"
types-pexpect = "^4.9.0"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
blondie = "agent.cli:entry_point"

[tool.poe.tasks]
test = "pytest"
lint = "ruff check ."
format = "ruff format ."
typecheck = "mypy ."
check = ["format", "lint", "typecheck", "test"]
coverage = "pytest --cov=src --cov-report=term-missing --cov-report=html"
run = "python -m agent.cli run _tmp/repo --journal-dir _tmp/repo/_logs --v2"
run-v1 = "python -m agent.cli run _tmp/repo --journal-dir _tmp/repo/_logs"
run-v2 = "python -m agent.cli run _tmp/repo --journal-dir _tmp/repo/_logs --v2"
setup-dev = "python scripts/setup_dev_repo.py --repo _tmp/repo --agent-config templates/project-calculator/.agent"
snapshot-dev = "python scripts/snapshot_tmp.py _tmp"
fetch-models = "python scripts/fetch_models.py"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["_tmp"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
install_types = true
exclude = ["_tmp"]

[tool.pylint."MESSAGES CONTROL"]
disable = ["redefined-outer-name"]

[tool.pylint.MASTER]
ignore = ["_tmp"]

[tool.pylint.FORMAT]
max-line-length = 120
